--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dana Shelton Basic Portfolio</title>
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset200802.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -15,9 +16,9 @@
             <h1>Dana Shelton</h1>
             <div id="nav">
                 <ul>
-                    <li><a href="Basic.html">About</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="index.html">ABOUT</a></li>
+                    <li><a href="Portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="Contact.html">CONTACT</a></li>
                 </ul>
             </div> 
         </header>
@@ -28,18 +29,17 @@
        <section>
             <h2>About Me</h2>
             <hr>
-                <p><img src="https://placehold.it/134x100">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat blandit aliquam etiam erat velit scelerisque. Senectus et netus et malesuada fames. Mi ipsum faucibus vitae aliquet nec. Interdum posuere lorem ipsum dolor sit. Enim praesent elementum facilisis leo. Proin libero nunc consequat interdum varius sit amet. Enim nulla aliquet porttitor lacus. Odio pellentesque diam volutpat commodo sed egestas egestas. Urna id volutpat lacus laoreet. Egestas dui id ornare arcu odio ut. Sed augue lacus viverra vitae congue eu. Mauris a diam maecenas sed enim ut sem. Nunc eget lorem dolor sed viverra. Felis eget velit aliquet sagittis id consectetur purus. Mauris ultrices eros in cursus turpis massa. Consectetur a erat nam at lectus. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Sed elementum tempus egestas sed. Vestibulum mattis ullamcorper velit sed ullamcorper morbi.
-                Ultricies mi eget mauris pharetra. Et netus et malesuada fames ac turpis egestas. Arcu non odio euismod lacinia at quis risus sed. Euismod nisi porta lorem mollis aliquam ut porttitor. Euismod quis viverra nibh cras. Tincidunt eget nullam non nisi. Montes nascetur ridiculus mus mauris. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Neque convallis a cras semper auctor. Laoreet non curabitur gravida arcu ac tortor dignissim. Nunc eget lorem dolor sed. Nunc aliquet bibendum enim facilisis. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas.
+                <p><img src="assets/images/DanaSheltonProfile_134x135.jpg" width="134px" height="135px" alt="Dana Shelton Headshot">You ever just have a really bad day? Like one of those "you've got to be kidding me," kind of days? This morning I was getting ready to go to a funeral for a lovely 94 year old woman, when I literally had to leave and go to the hospital because my step dad died in a motorcycle accident. 61 years old, hit an animal or something and flew 30 feet, breaking his neck in two places. I'm pissed, and I'm sad. It's been one of those days where I'm waiting for someone to jump out and yell "Just Kidding!"
                 <br>
                 <br>
-                Lectus quam id leo in vitae turpis massa sed. Nunc id cursus metus aliquam eleifend mi. Amet dictum sit amet justo donec enim diam vulputate ut. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris ultrices. Mauris sit amet massa vitae tortor. Mattis vulputate enim nulla aliquet porttitor. Sed risus pretium quam vulputate. Maecenas volutpat blandit aliquam etiam erat velit. Aliquet sagittis id consectetur purus ut faucibus. Ultricies tristique nulla aliquet enim. Pellentesque sit amet porttitor eget dolor morbi non arcu risus. Mi in nulla posuere sollicitudin aliquam ultrices sagittis. Libero enim sed faucibus turpis in. Aliquet eget sit amet tellus cras adipiscing enim. Blandit massa enim nec dui. Nam at lectus urna duis convallis convallis tellus id. Sed ullamcorper morbi tincidunt ornare massa eget egestas. Magna eget est lorem ipsum. Volutpat blandit aliquam etiam erat velit.
+                However... It's late. I'm tired. And no one has revealed some sick elaborate rouse. Yet I am still sitting here trying to write an autobiography despite my brain being in complete shock and feeling a bit fuzzy because that's who I am. I don't give up, I don't like making excuses, and I write crappy bios sometimes but at least I try. That's the beauty of the internet over print, isn't it? So much easier to rewrite on a better day... and cheaper.
                 </p>
         </section>    
     </div>
 
     <!-- Begin Footer -->
     <footer>
-        Copyright ©Dana Shelton
+        Copyright © Dana Shelton
     </footer>
 
 
